<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">IPTV2</string>
    <string name="icon_epg_now"></string>
    <string name="icon_epg_record"></string>
    <string name="icon_favorite"></string>
    <string name="icon_favorite_checked"></string>
    <string name="icon_index_live"></string>
    <string name="icon_index_setting"></string>
    <string name="icon_index_vodondemand"></string>
    <string name="icon_index_vodseries"></string>
    <string name="icon_language"></string>
    <string name="icon_list"></string>
    <string name="icon_list_empty"></string>
    <string name="icon_lock"></string>
    <string name="icon_menu"></string>
    <string name="icon_more_arrow_down"></string>
    <string name="icon_more_arrow_up"></string>
    <string name="icon_osd_brightness"></string>
    <string name="icon_osd_speaker"></string>
    <string name="icon_osd_speaker_mute"></string>
    <string name="icon_pause"></string>
    <string name="icon_play"></string>
    <string name="icon_player"></string>
    <string name="icon_reporterror"></string>
    <string name="icon_search"></string>
    <string name="icon_setting"></string>
    <string name="icon_share"></string>
    <string name="icon_timezone"></string>
    <string name="icon_unlock"></string>
    <string name="icon_videoratio_autofit"></string>
    <string name="icon_videoratio_fill"></string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>
