<?xml version="1.0" encoding="utf-8"?>
<com.iptv2.base.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal" android:id="@+id/widget_live_overlay" android:background="@drawable/widget_live_overlay_short_bg" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" android:alpha="0">
    <com.iptv2.base.RelativeLayout android:clickable="true" android:layout_width="@dimen/widget_live_overlay_genre_width" android:layout_height="match_parent" app:border_color="@color/spliter_line_color" app:border_enable="true" app:border_right_size="1dp">
        <TextView android:id="@+id/time" android:layout_marginTop="@dimen/width_12_320" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" style="@style/Time"/>
        <com.iptv2.base.SimpleRecyclerView android:id="@+id/genre_list" android:clipChildren="false" android:clipToPadding="true" android:layout_width="match_parent" android:layout_height="0dp" android:layout_centerVertical="true"/>
        <com.iptv2.control.IcomoonView android:id="@+id/genre_more_up" android:text="@string/icon_more_arrow_up" android:layout_above="@+id/genre_list" android:layout_centerHorizontal="true" style="@style/GenreMore"/>
        <com.iptv2.control.IcomoonView android:id="@+id/genre_more_down" android:text="@string/icon_more_arrow_down" android:layout_below="@+id/genre_list" android:layout_centerHorizontal="true" style="@style/GenreMore"/>
        <com.iptv2.control.IcomoonView android:id="@+id/btn_setting" android:layout_marginBottom="@dimen/width_8_320" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/SettingButton"/>
    </com.iptv2.base.RelativeLayout>
    <com.iptv2.base.FrameLayout android:id="@+id/channelListContainer" android:background="@drawable/widget_live_overlay_short_channal_list_bg" android:clipChildren="false" android:clipToPadding="true" android:layout_width="@dimen/widget_live_overlay_channel_width" android:layout_height="match_parent" app:border_color="@color/spliter_line_color" app:border_enable="true" app:border_right_size="1dp">
        <com.iptv2.base.SimpleRecyclerView android:layout_gravity="center_vertical" android:id="@+id/channel_list" android:clipChildren="false" android:layout_width="match_parent" android:layout_height="0dp"/>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@+id/favorites_empty" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/width_10_320" android:layout_marginRight="@dimen/width_10_320">
            <com.iptv2.control.IcomoonView android:textSize="@dimen/width_40_320" android:textColor="#595959" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/icon_list_empty"/>
            <TextView android:textSize="@dimen/textsize_big" android:textColor="#595959" android:gravity="center" android:id="@+id/favorites_empty_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/width_5_320" android:shadowColor="#000000" android:shadowRadius="2" android:lineSpacingMultiplier="1.2"/>
        </LinearLayout>
    </com.iptv2.base.FrameLayout>
    <com.iptv2.base.FrameLayout android:id="@+id/epg_wrapper" android:visibility="invisible" android:layout_width="0dp" android:layout_height="match_parent" app:border_color="@color/spliter_line_color" app:border_enable="true" app:border_right_size="1dp">
        <com.iptv2.base.FrameLayout android:id="@+id/epg_list_wrapper" android:background="@drawable/widget_live_overlay_short_epg_item_bg" android:layout_width="@dimen/widget_live_overlay_epg_width" android:layout_height="match_parent" android:alpha="0">
            <com.iptv2.base.SimpleRecyclerView android:layout_gravity="right|center_vertical|center_horizontal|center" android:id="@+id/epg_list" android:clipChildren="false" android:clipToPadding="true" android:layout_width="match_parent" android:layout_height="0dp"/>
        </com.iptv2.base.FrameLayout>
        <com.iptv2.base.FrameLayout android:id="@+id/day_list_wrapper" android:background="@drawable/widget_live_overlay_short_epg_day_bg" android:visibility="invisible" android:layout_width="@dimen/widget_live_overlay_day_width" android:layout_height="match_parent" android:layout_marginLeft="@dimen/widget_live_overlay_epg_width" android:alpha="0" app:border_color="@color/spliter_line_color" app:border_enable="true" app:border_left_size="1dp">
            <com.iptv2.base.SimpleRecyclerView android:layout_gravity="right|center_vertical|center_horizontal|center" android:id="@+id/day_list" android:clipChildren="false" android:clipToPadding="true" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </com.iptv2.base.FrameLayout>
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center" android:orientation="vertical" android:id="@+id/epg_empty" android:visibility="gone" android:layout_width="@dimen/widget_live_overlay_epg_loading_width" android:layout_height="wrap_content">
            <com.iptv2.control.IcomoonView android:textSize="@dimen/width_40_320" android:textColor="#595959" android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/icon_list_empty"/>
            <TextView android:textSize="@dimen/textsize_big" android:textColor="#595959" android:gravity="center_horizontal" android:id="@+id/epg_empty_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/width_5_320" android:shadowColor="#000000" android:shadowRadius="2"/>
        </LinearLayout>
        <com.victor.loading.rotate.RotateLoading android:layout_gravity="center" android:id="@+id/epg_loading" android:visibility="gone" android:layout_width="@dimen/width_30_320" android:layout_height="@dimen/width_30_320" android:alpha="0" app:loading_color="#2598e5" app:loading_speed="6" app:loading_width="3dp"/>
    </com.iptv2.base.FrameLayout>
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="match_parent">
        <FrameLayout android:id="@+id/arrow_tip_container" android:background="@drawable/toast_round_bg" android:layout_width="@dimen/width_28_320" android:layout_height="@dimen/width_28_320" android:layout_marginLeft="@dimen/width_4_320" android:minWidth="@dimen/width_28_320" android:layout_alignLeft="@+id/arrow" android:layout_centerVertical="true" android:alpha="0">
            <TextView android:textSize="@dimen/textsize_big" android:textColor="#fff" android:layout_gravity="center_vertical" android:id="@+id/arrow_tip_text" android:paddingLeft="@dimen/width_30_320" android:paddingRight="@dimen/width_12_320" android:layout_width="0dp" android:layout_height="wrap_content" android:singleLine="true" android:alpha="0"/>
        </FrameLayout>
        <ImageView android:id="@+id/arrow" android:padding="@dimen/width_8_320" android:layout_width="@dimen/width_35_320" android:layout_height="@dimen/width_35_320" android:src="@drawable/icon_arrow_right2" android:scaleType="fitCenter" android:layout_centerVertical="true"/>
    </RelativeLayout>
</com.iptv2.base.LinearLayout>
